@@ -11,15 +11,15 @@ import org.junit.jupiter.api.*;
 public class ThreadingUtilTest {
 
     boolean done;
-    
+
     @Test
     public void testToLayout() {
         done = false;
-        
-        ThreadingUtil.runOnLayout( ()-> { 
-            done = true; 
+
+        ThreadingUtil.runOnLayout( ()-> {
+            done = true;
         } );
-        
+
         Assert.assertTrue(done);
     }
 
@@ -30,7 +30,7 @@ public class ThreadingUtilTest {
         Assert.assertEquals(tg.getName(), "JMRI");
         Assert.assertEquals(tg, ThreadingUtil.getJmriThreadGroup());
     }
-    
+
     @Test
     public void testThreadStartEnd() throws InterruptedException {
         ThreadingUtil.getJmriThreadGroup();  // just used to create the group
@@ -47,10 +47,10 @@ public class ThreadingUtilTest {
         // if (!java.lang.management.ManagementFactory
         //                                        .getThreadMXBean().isSynchronizerUsageSupported())
         //        log.info("This JVM doesn't support synchronized lock tracking");
-                                                
+
         final Object lockedThing = new Object();
         done = false;
-        
+
         synchronized (lockedThing) {
             // first, run something that also wants the lock
             new Thread(() -> {
@@ -58,12 +58,12 @@ public class ThreadingUtilTest {
                     testRef = lockedThing;
                 }
             }).start();
-            
-            ThreadingUtil.runOnGUI( ()-> { 
-                done = true; 
+
+            ThreadingUtil.runOnGUI( ()-> {
+                done = true;
                 Assert.assertNull(testRef); // due to lock
             } );
- 
+
             JUnitUtil.waitFor( ()->{ return done; }, "GUI thread complete");
             Assert.assertNull(testRef); // due to lock
         }
@@ -73,18 +73,18 @@ public class ThreadingUtilTest {
     @Test
     public void testThreadingNesting() {
         done = false;
-        
+
         Thread t = new Thread(
             new Runnable() {
                 @Override
                 public void run() {
                     // now on another thread
                     // switch back to Layout thread
-                    ThreadingUtil.runOnLayout( ()-> { 
+                    ThreadingUtil.runOnLayout( ()-> {
                         // on layout thread, confirm
                         Assert.assertTrue("on Layout thread", ThreadingUtil.isLayoutThread());
                         // mark done so we know
-                        done = true; 
+                        done = true;
                     } );
                 }
             }
@@ -99,18 +99,18 @@ public class ThreadingUtilTest {
     @Test
     public void testThreadingNestingToSwing() {
         done = false;
-        
+
         javax.swing.SwingUtilities.invokeLater(
             new Runnable() {
                 @Override
                 public void run() {
                     // now on Swing thread
                     // switch back to Layout thread
-                    ThreadingUtil.runOnLayout( ()-> { 
+                    ThreadingUtil.runOnLayout( ()-> {
                         // on layout thread, confirm
                         Assert.assertTrue("on Layout thread", ThreadingUtil.isLayoutThread());
                         // mark done so we known
-                        done = true; 
+                        done = true;
                     } );
                 }
             }
@@ -123,14 +123,14 @@ public class ThreadingUtilTest {
     @Test
     public void testThreadingDelayGUI() {
         done = false;
-        
-        ThreadingUtil.runOnGUIDelayed( ()-> { 
-            done = true; 
+
+        ThreadingUtil.runOnGUIDelayed( ()-> {
+            done = true;
         }, 200 );
 
         // ensure not done now
         Assert.assertTrue(!done);
-        
+
         // wait for separate thread to do it's work before confirming test
         JUnitUtil.waitFor( ()->{ return done; }, "Delayed operation complete");
     }
@@ -138,37 +138,37 @@ public class ThreadingUtilTest {
     @Test
     public void testThreadingRunOnGUIwithReturn() {
         done = false;
-        
-        Integer value = ThreadingUtil.runOnGUIwithReturn( ()-> { 
-            done = true; 
-            return new Integer(21);
+
+        Integer value = ThreadingUtil.runOnGUIwithReturn( ()-> {
+            done = true;
+            return 21;
         });
 
         Assert.assertTrue(done);
-        Assert.assertEquals(new Integer(21), value);
+        Assert.assertEquals(Integer.valueOf(21), value);
     }
 
     @Test
     public void testThreadingDelayLayout() {
         done = false;
-        
-        ThreadingUtil.runOnLayoutDelayed( ()-> { 
-            done = true; 
+
+        ThreadingUtil.runOnLayoutDelayed( ()-> {
+            done = true;
         }, 200 );
 
         // ensure not done now
         Assert.assertTrue(!done);
-        
+
         // wait for separate thread to do it's work before confirming test
         JUnitUtil.waitFor( ()->{ return done; }, "Delayed oepration complete");
     }
 
     @Test
     public void testThreadingTests() {
-        ThreadingUtil.runOnLayout( ()-> { 
+        ThreadingUtil.runOnLayout( ()-> {
             ThreadingUtil.requireLayoutThread(log);
         } );
-        ThreadingUtil.runOnGUI( ()-> { 
+        ThreadingUtil.runOnGUI( ()-> {
             ThreadingUtil.requireGuiThread(log);
         } );
         Assert.assertTrue(jmri.util.JUnitAppender.verifyNoBacklog());
@@ -182,15 +182,15 @@ public class ThreadingUtilTest {
         ThreadingUtil.requireGuiThread(log);
         ThreadingUtil.requireLayoutThread(log);
         Assert.assertTrue(jmri.util.JUnitAppender.verifyNoBacklog());
-        
+
    }
-    
+
     /**
      * Show how to query state of _current_ thread
      */
     @Test
     public void testSelfState() {
-    
+
         // To run the tests, this thread has to be running, not waiting
         Assert.assertTrue(ThreadingUtil.canThreadRun(Thread.currentThread()));
         Assert.assertFalse(ThreadingUtil.isThreadWaiting(Thread.currentThread()));
